always use endorsed dir and prepare it if needed instead of altering bootclasspath
svn path=/trunk/; revision=615